--- a/style.css
+++ b/style.css
@@ -50,16 +50,22 @@ body .header__menu__settings:hover {
   max-width: 1000px;
   background-color: #fff;
 }
+body .header__menu__settings .settings-done.chosen {
+  background-color: #00b1e9;
+}
+body .header__menu__settings .settings-date.chosen {
+  background-color: #00b1e9;
+}
 body .header__menu__settings img {
   margin-right: 10px;
   width: 25px;
   padding: 5px;
   border-radius: 50%;
-  background-color: #83e1ff;
   transition: 0.5s;
   cursor: pointer;
 }
 body .header__menu__settings img:last-child {
+  background-color: #83e1ff;
   transition: 0.5s;
   padding: 7px;
   margin-right: 0;
